# Projet-SIGm4

./: .gitignore  Doxyfile  README.md  sigm4-open.sh
.github/workflows/: back-end.yml  ci.yml  front-end.yml  test.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile
backend/data/: test_project.sigm4
backend/data/required/: FR  fr_ign_RGM23_defmodel.json  fr_ign_RGM23_to_ITRF2020.json  fr_ign_grid_ITRF2020_RGM23_velA.tif  fr_ign_grid_ITRF2020_RGM23_velB.tif  fr_ign_grid_RGM04toRGM23.tif  fr_ign_lonlat_RGM23_deformation_model.tif
backend/include/: Application.hpp  proj_test.hpp
backend/include/core/: DataManager.hpp  GeoPackageReader.hpp  GeodeticTransformer.hpp  Geometry4D.hpp  Layer.hpp  Project.hpp  ProjectManager.hpp  RasterLayer.hpp  TransformationEngine.hpp  VectorLayer.hpp  geodetictransformer.hpp
backend/include/db/: Config.hpp  PostgresClient.hpp
backend/src/: Application.cpp  geodetictransformer.cpp  main.cpp  proj_test.cpp
backend/src/core/: DataManager.cpp  GeoPackageReader.cpp  GeodeticTransformer.cpp  Geometry4D.cpp  Layer.cpp  Project.cpp  ProjectManager.cpp  TransformationEngine.cpp  geodetictransformer.cpp  proj_test.cpp
backend/src/db/: Config.cpp  PostgresClient.cpp
backend/tests/: CMakeLists.txt
backend/tests/integration/: example.cpp  test_integration_example.cpp
backend/tests/unit/: CMakeLists.txt  test_datamanager.cpp  test_example.cpp  test_geometry4d.cpp  test_geopackagereader.cpp  test_proj.cpp  test_project_class.cpp  test_projectmanager.cpp  test_transformationengine.cpp
build-frontend-Desktop-Debug/: CMakeCache.txt
docs/api-reference/: Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8hpp.html  Application_8hpp__dep__incl.map  Application_8hpp__dep__incl.md5  Application_8hpp__incl.map  Application_8hpp__incl.md5  Application_8hpp_source.html  Carte_8cpp.html  Carte_8h__dep__incl.map  Carte_8h__incl.map  Config_8cpp.html  Config_8cpp__incl.map  Config_8cpp__incl.md5  Config_8hpp.html  Config_8hpp__dep__incl.map  Config_8hpp__dep__incl.md5  Config_8hpp__incl.map  Config_8hpp_source.html  DataManager_8cpp.html  DataManager_8cpp__incl.map  DataManager_8cpp__incl.md5  DataManager_8hpp.html  DataManager_8hpp__dep__incl.map  DataManager_8hpp__dep__incl.md5  DataManager_8hpp__incl.md5  DataManager_8hpp_source.html  GeoPackageReader_8cpp.html  GeoPackageReader_8cpp__incl.map  GeoPackageReader_8cpp__incl.md5  GeoPackageReader_8hpp.html  GeoPackageReader_8hpp__dep__incl.map  GeoPackageReader_8hpp__dep__incl.md5  GeoPackageReader_8hpp__incl.map  GeoPackageReader_8hpp_source.html  Geometry4D_8cpp.html  Geometry4D_8cpp__incl.map  Geometry4D_8cpp__incl.md5  Geometry4D_8hpp.html  (+141 more)
docs/api-reference-backup/: Application_8cpp__incl.md5  Application_8hpp__dep__incl.map  Application_8hpp_source.html  Carte_8cpp__incl.map  Carte_8cpp__incl.md5  Carte_8h.html  Carte_8h__dep__incl.md5  Carte_8h__incl.md5  Carte_8h_source.html  Config_8cpp__incl.map  Config_8cpp__incl.md5  Config_8hpp__dep__incl.md5  Config_8hpp__incl.md5  DataManager_8cpp.html  DataManager_8cpp__incl.md5  DataManager_8hpp__dep__incl.md5  DataManager_8hpp__incl.map  GeoPackageReader_8hpp__incl.md5  GeoPackageReader_8hpp_source.html  Geometry4D_8cpp__incl.map  Geometry4D_8cpp__incl.md5  Geometry4D_8hpp__dep__incl.map  Geometry4D_8hpp__dep__incl.md5  Geometry4D_8hpp__incl.map  Geometry4D_8hpp__incl.md5  Layer_8hpp__dep__incl.md5  Layer_8hpp__incl.map  Layer_8hpp__incl.md5  PostgresClient_8cpp__incl.map  PostgresClient_8cpp__incl.md5  PostgresClient_8hpp.html  PostgresClient_8hpp__incl.map  PostgresClient_8hpp_source.html  Project_8hpp__dep__incl.md5  Project_8hpp__incl.md5  Project_8hpp_source.html  README_8md.html  VectorLayer_8hpp.html  VectorLayer_8hpp__dep__incl.map  VectorLayer_8hpp__dep__incl.md5  (+104 more)
docs/api-reference-backup/search/: all_0.js  all_10.js  all_15.js  all_4.js  all_7.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  files_1.js  files_2.js  files_9.js  functions_2.js  functions_3.js  functions_4.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_7.js  variables_c.js
docs/api-reference/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_d.js  classes_5.js  classes_7.js  classes_8.js  files_3.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_d.js  functions_e.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_3.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
frontend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  resources.qrc  style.qss
frontend/include/: Carte.h  DeformationModelWidget.h  Layer.h  LayerManager.h  MapToolIdentifyFeature.h  ProjectCaracteristicsDisplay.h  TransformCRS.h  dialogLayerManagement.h  mainwindow.h
frontend/resources/: resources.qrc
frontend/src/: Carte.cpp  Carte.h  DeformationModelWidget.cpp  Layer.cpp  LayerManager.cpp  MapToolIdentifyFeature.cpp  ProjectCaracteristicsDisplay.cpp  TransformCRS.cpp  dialog.cpp  dialog.h  dialog.ui  dialogLayerManagement.cpp  dialogLayerManagement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  projet.cpp  projet.h
frontend/tests/: CMakeLists.txt
frontend/tests/unit/: test_carte.cpp
frontend/ui/: dialogLayerManagement.ui  mainwindow.ui
infrastructure/: docker-compose.yml
